# ultrasound-fm

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: project_structure.md
scripts/: create_dummy_data.py  smoke_test.py
src/data/: dummy_dataset.py
src/models/: __init__.py  attention.py  mlp.py  model_configs.py  patch_embed.py  transformer_block.py  vit.py
